--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "storm-surge-api",
-  "version": "1.0.0",
-  "description": "Storm Surge Weather Backend API",
+  "version": "1.1.0",
+  "description": "Storm Surge Weather — Backend API + Frontend Server",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -17,9 +17,8 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
-    "node-cache": "^5.1.2",
-    "node-fetch": "^3.3.2"
+    "multer": "^2.0.0",
+    "node-cache": "^5.1.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
