--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "storm-surge-api",
   "version": "1.1.0",
-  "description": "Storm Surge Weather — Backend API + Frontend Server",
+  "description": "Storm Surge Weather \u2014 Backend API + Frontend Server",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -18,7 +18,8 @@
     "express-rate-limit": "^7.1.5",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.0",
-    "node-cache": "^5.1.2"
+    "node-cache": "^5.1.2",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
